# modal-rbe-backend

./: .gitignore  README.md  pyproject.toml
examples/exec-go/: .bazelrc  .bazelrc.local.example  BUILD.bazel  MODULE.bazel  main.go
examples/hello/: .bazelrc  .bazelrc.local.example  BUILD.bazel  MODULE.bazel
examples/multipool/: app.py
modal_rbe/: __init__.py  app.py  cas.py  execute.py  resource_name.py  server.py  setup_secret.py  telemetry.py  url.py
modal_rbe/core/: __init__.py  cache.py  digest.py  execute_impl.py  grpc_server.py  images.py  lru.py
modal_rbe/core/servicers/: ac_servicer.py  bytestream.py  capabilities.py  cas_servicer.py  execution.py
modal_rbe/servicers/: ac_servicer.py  bytestream.py  capabilities.py  cas_servicer.py  execution.py
scripts/: gen_protos.sh
