load("@rules_go//go:def.bzl", "go_binary")

# A pure-Go binary (no cgo) so we don't need a C++ toolchain on the executor.
# `pure = "on"` disables cgo unconditionally.
go_binary(
    name = "hello",
    srcs = ["main.go"],
    pure = "on",
)

# A platform that matches the Modal executor (debian_slim, x86_64).
platform(
    name = "linux_amd64",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
)
