module(name = "exec_go", version = "0.0.0")

bazel_dep(name = "rules_go", version = "0.59.0")
bazel_dep(name = "platforms", version = "1.0.0")

# Pin a Go SDK version. rules_go downloads host + cross SDKs as needed.
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.23.0")
